# internal/server/http.go
@@ -1,32 +1,44 @@
 package server
 
 import (
-	v1 "HealthMonitor/api/helloworld/v1"
+	helloworldV1 "HealthMonitor/api/helloworld/v1"
+	indexV1 "HealthMonitor/api/index/v1"
+	"HealthMonitor/internal/biz"
 	"HealthMonitor/internal/conf"
+	"HealthMonitor/internal/data"
 	"HealthMonitor/internal/service"
-
 	"github.com/go-kratos/kratos/v2/log"
 	"github.com/go-kratos/kratos/v2/middleware/recovery"
 	"github.com/go-kratos/kratos/v2/transport/http"
 )
 
 // NewHTTPServer new an HTTP server.
-func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, logger log.Logger) *http.Server {
-	var opts = []http.ServerOption{
+func NewHTTPServer(c *conf.Server, dataData *data.Data, logger log.Logger) *http.Server {
+	var serverOpts = []http.ServerOption{
 		http.Middleware(
 			recovery.Recovery(),
 		),
 	}
 	if c.Http.Network != "" {
-		opts = append(opts, http.Network(c.Http.Network))
+		serverOpts = append(serverOpts, http.Network(c.Http.Network))
 	}
 	if c.Http.Addr != "" {
-		opts = append(opts, http.Address(c.Http.Addr))
+		serverOpts = append(serverOpts, http.Address(c.Http.Addr))
 	}
 	if c.Http.Timeout != nil {
-		opts = append(opts, http.Timeout(c.Http.Timeout.AsDuration()))
+		serverOpts = append(serverOpts, http.Timeout(c.Http.Timeout.AsDuration()))
 	}
-	srv := http.NewServer(opts...)
-	v1.RegisterGreeterHTTPServer(srv, greeter)
+	srv := http.NewServer(serverOpts...)
+
+	RegisterHTTPRoutes(srv, dataData, logger)
 	return srv
+}
+
+func RegisterHTTPRoutes(srv *http.Server, dataData *data.Data, logger log.Logger) {
+	indexService := service.NewIndexService()
+	greeterRepo := data.NewGreeterRepo(dataData, logger)
+	greeterUsecase := biz.NewGreeterUsecase(greeterRepo, logger)
+	greeterService := service.NewGreeterService(greeterUsecase)
+	helloworldV1.RegisterGreeterHTTPServer(srv, greeterService)
+	indexV1.RegisterIndexHTTPServer(srv, indexService)
 }
